Add Zones to frontend UI
