# garden-app/api/openapi.yaml
@@ -1119,6 +1119,8 @@ components:
               type: string
               format: date-time
               description: the date-time when the Zone was deleted/removed
+            next_water:
+              $ref: "#/components/schemas/NextWaterDetails"
             next_water_time:
               type: string
               description: time of the next scheduled watering
@@ -1131,7 +1133,7 @@ components:
               format: duration
               example: 10m0s
             weather_data:
-              $ref: "#/components/schemas/link"
+              $ref: "#/components/schemas/WeatherData"
             links:
               type: array
               items:
@@ -1152,6 +1154,28 @@ components:
         - name
         - position
         - water_schedule_ids
+
+    NextWaterDetails:
+      type: object
+      description: used in ZoneResponse to show detailed information about the next watering job
+      properties:
+        time:
+          type: string
+          format: date-time
+          description: the time when th water schedule will be next triggered
+        duration:
+          type: string
+          format: duration
+          description: |
+            the duration that watering will run for. If weather scaling is configured, current weather data will be used to calculate
+            an adjusted duration, but it may be a different value when the actual schedule executes
+        water_schedule_id:
+          $ref: "#/components/schemas/xid"
+          description: ID of the water_schedule that is executing next
+        message:
+          type: string
+          description: human-readable information about upcoming watering
+          example: skip_count 5 affected the time
 
     WeatherData:
       type: object
