# garden-app/server/server.go
@@ -18,6 +18,7 @@ import (
 	"github.com/calvinmclean/automated-garden/garden-app/worker"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/go-chi/cors"
 	"github.com/go-chi/render"
 	"github.com/prometheus/client_golang/prometheus/promhttp"
 	"github.com/sirupsen/logrus"
@@ -40,7 +41,8 @@ type Config struct {
 
 // WebConfig is used to allow reading the "web_server" section into the main Config struct
 type WebConfig struct {
-	Port int `mapstructure:"port"`
+	Port       int  `mapstructure:"port"`
+	EnableCors bool `mapstructure:"enable_cors"`
 }
 
 // Server contains all of the necessary resources for running a server
@@ -67,6 +69,17 @@ func NewServer(cfg Config) (*Server, error) {
 	r.Use(middleware.Recoverer)
 	r.Use(render.SetContentType(render.ContentTypeJSON))
 	r.Use(middleware.Timeout(3 * time.Second))
+
+	if cfg.EnableCors {
+		r.Use(cors.Handler(cors.Options{
+			AllowedOrigins:   []string{"http://localhost:5173"},
+			AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+			AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+			ExposedHeaders:   []string{"Link"},
+			AllowCredentials: false,
+			MaxAge:           300, // Maximum value not ignored by any of major browsers
+		}))
+	}
 
 	// Configure HTTP metrics
 	r.Use(std.HandlerProvider("", metrics_middleware.New(metrics_middleware.Config{
